# libpeci

./: 0001-Add-sequenced-version-of-peci_raw-method.patch  0002-Add-SendRawPeci-programmable-retry-timing.patch  CMakeLists.txt  OWNERS  README.md  dbus_raw_peci.cpp  groups  meson.build  meson.options  meson_options.txt  peci.c  peci.h  peci.pc.in  peci_cmds.c  project.config
linux/: peci-ioctl.h
service_files/: com.intel.peci.service  meson.build
subprojects/packagefiles/boost/: meson.build
